# git-shield

./: .gitignore  .gitleaksignore  .pii-allowlist  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_EVAL.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: .pii-allowlist  eval_models.py  git-shield.toml
examples/eval/: pii_cases.jsonl
src/git_shield/: __init__.py  __main__.py  allowlist.py  cache.py  chunking.py  cli.py  config.py  cuda.py  diff.py  doctor.py  gliner.py  init_config.py  install.py  installer.py  opf.py  output.py  prepush.py  scanner.py  secrets.py  structured.py
src/git_shield/commands/: __init__.py  _scan_common.py  audit.py  bootstrap.py  doctor.py  init.py  install.py  prepush.py  scan.py  secrets.py  status.py  uninstall.py
src/privacy_prepush/: __init__.py  cli.py  diff.py  opf.py  scanner.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_cuda.py  test_diff.py  test_doctor.py  test_git_integration.py  test_init_config.py  test_install.py  test_json_output.py  test_line_numbers.py  test_new_features.py  test_new_features_v2.py  test_no_raw_output.py  test_opf.py  test_prepush.py  test_scanner.py  test_secrets.py
