[project]
name = "openai-privacy-prepush"
version = "0.1.0"
description = "Pre-push PII guard powered by OpenAI Privacy Filter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opf = [
  # Installed separately from https://github.com/openai/privacy-filter for now.
]
test = [
  "pytest>=8",
]

[project.scripts]
privacy-prepush = "privacy_prepush.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_prepush"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
